# CT-ARK

./: README.md
RasPiPico/ct-ark-sys/: build.cmd  ct-ark.z80  tools.z80
RasPiPico/firmware/: CMakeLists.txt  README.txt  sys_clock.h
RasPiPico/firmware/ct-ark/: CMakeLists.txt  ct-ark.cpp  ct-ark.pio  def_gpio.h  global.cpp  global.h  if_msxpico.h  sdfat.cpp  sdfat.h  timerobj.h  title.cpp  title.h
RasPiPico/firmware/ct-ark/ff/: mmc_pico_spi.c
docs/: CT-ARK-04A_parts_list.xlsx  CT-ARK-04B_parts_list.xlsx  CT-ARK-04C_parts_list.xlsx
